feat: 리스트 페이징 추가

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,14 @@ body {
     text-wrap: balance;
   }
 }
+
+/* 웹킷 기반 브라우저 (Chrome, Safari 등) */
+::-webkit-scrollbar {
+  display: none;
+}
+
+/* Firefox */
+* {
+  scrollbar-width: none;
+  -ms-overflow-style: none; /* IE and Edge */
+}
